--- a/static/css/about.css
+++ b/static/css/about.css
@@ -361,7 +361,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("https://img.freepik.com/free-photo/skyscrapers-from-low-angle-view_1359-568.jpg?w=2000") top center;
+  background: url("https://d2v9ipibika81v.cloudfront.net/uploads/sites/175/IMG_1501-750x450.jpg") top center;
   background-size: cover;
   position: relative;
 }
