--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="static/css/sus.css" rel="stylesheet">
+  <link href="static/css/style.css" rel="stylesheet">
 
   <!-- Javascript AOS -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -54,7 +54,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a  href="/">Home</a></li>
+          <li><a class="nav-link scrollto active" href="/">Home</a></li>
           <li class="dropdown"><a href="/about"><span>About Us <i class="fa fa-arrow-down"></i> </span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="/about">Who We Are </a></li>
@@ -73,7 +73,7 @@
             </ul>
           </li> 
           <li><a class="nav-link scrollto" href="/our-businesses">Our Businesses</a></li>
-          <li><a class="nav-link scrollto active" href="/sustainability">Sustainability</a></li>
+          <li><a class="nav-link scrollto " href="/sustainability">Sustainability</a></li>
          
           <li><a href="#">Strongskill Foundation</a></li>
            
@@ -99,106 +99,49 @@
   <section id="hero">
     <div class="hero-container" data-aos="fade-up"
     data-aos-duration="3000">
-      <h3>Sustainability</h3>
-      <h1>Building prosperity &<br> self-sufficiency across Africa</h1>
+      <h3>We Are</h3>
+      <h1>Strong Skills International</h1>
     
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
 
   <main id="main">
-   
+
+
    
 
 
+    <section id="team" class="team">
+      <div class="container">
+        <div class="section-title">
+          <h2>ABOUT US </h2>
+          <h3>Who  <span> We Are?</span></h3>
+          <p>We will provide you with outlined logistics and Artistes of your choice depending on your budget.  </p>
+        </div>
+
+
+        <div class="video-section">
+          <div class="video-section-half2" data-aos="fade-left" data-aos-offset="100">
+            <iframe width="100%" height="100%" src="https://video-previews.elements.envatousercontent.com/h264-video-previews/31fa9073-edbd-4e32-854f-513457b95c46/28421817.mp4" muted  frameborder="0" allow="accelerometer; autoplay; muted; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="box-shadow: 0 2px 10px -3px #493c3e;" allowfullscreen controls autoplay></iframe>
+          </div> 
+         
+          <div class="video-section-half1" data-aos="fade-right" data-aos-offset="100">
+            <p>This tour designed by our team, is to help transform student entertainment events into a world class outcome capable of attracting top notch corporate brands and leaving patrons of these events highly satisfied. </p>
+            <p>Providing you with logistics depending on your outline thus, (stage, led light trusses, sound systems, etc.), and any Artiste of your choice depending on your budget.
+              This tour is most effective in their <span>SRC week celebration, hall week celebrations, Awards and Pageantry shows</span> desired by these institutions.</p>
+            <a href="events.html" style="border:solid 2px; border-radius:30px; width:190px; padding:10px;" class="btn-learn-more">Explore More</a>
+          </div>
+        </div>
+      </div>
+      
+    </section>
 
 
    
 
     <section id="services" class="services" style="margin-bottom:50px;">
       <div class="container">
-        <div class="section-title">
-            <h2>Sustainability</h2>
-            <h3>Our Sustainability  <span>Commitment</span></h3>
-            <p>Building prosperity & self-sufficiency across Africa</p>
-          </div>
-
-        <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="250"data-aos="zoom-in">
-            <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Marketing</a></h4>
-              <p class="description">We aim to concentrate and promote projects and products</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="200"data-aos="zoom-in">
-            <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Media</a></h4>
-              <p class="description">We arganise events for coporate and individual clients</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in">
-            <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;" >
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Analytics</a></h4>
-              <p class="description">We are able to manage and identify growth based on our numbers.</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="100"data-aos="zoom-in">
-            <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Schemes  </a></h4>
-              <p class="description">Single product, event organisations and entity advertisment is our craft.</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-      <div class="container"  style="margin-top:40px;">
-
-
-        <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="250"data-aos="zoom-in">
-            <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Marketing</a></h4>
-              <p class="description">We aim to concentrate and promote projects and products</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="200"data-aos="zoom-in">
-            <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Media</a></h4>
-              <p class="description">We arganise events for coporate and individual clients</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in">
-            <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;" >
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Analytics</a></h4>
-              <p class="description">We are able to manage and identify growth based on our numbers.</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="100"data-aos="zoom-in">
-            <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Schemes  </a></h4>
-              <p class="description">Single product, event organisations and entity advertisment is our craft.</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-      <div class="container" style="margin-top:40px;">
 
 
         <div class="row">
@@ -305,9 +248,130 @@
 
     <!-- ======= Services Section ======= -->
     
-    
-    <!-- ======= Features Section ======= -->
+    <div class="section-title" style="margin-top:50px;">
+      <h2>OUR BUSINESSES</h2>
+      <h3>What  <span>We Offer</span></h3>
+      <p>We believe in the concept of good customer service hence our vision to become the most efficient and influential business conglomerate in Africasss and beyond.</p>
+    </div> 
+    <section class="preços-section" id="preços"> 
+      <div class="produto1" data-aos="fade-up" data-aos-offset="250" data-aos="zoom-in" >
+        <div class="imagem-produto1"  style="box-shadow: 0 2px 10px -3px #117964;">
+          <div class="price-tag" style="color:#fff;"><span>1st April, 2022</span></div>
+        </div>
+        <div class="texto-produto1">
+        <h2> SERVICES</h2>
+        
+        </div>
+      </div>
+      <div class="produto2" data-aos="fade-up" data-aos-offset="200"data-aos="zoom-in">
+        <div class="imagem-produto2"  style="box-shadow: 0 2px 10px -3px #117964;">
+        <div class="price-tag" style="color:#fff;"><span>23rd April, 2022</span></div>
+        </div>
+        <div class="texto-produto2">
+        <h2>MANAGEMENT</h2>
+        
+        </div>
+      </div>
+      <div class="produto3" data-aos="fade-up" data-aos-offset="150" data-aos="zoom-in">
+        <div class="imagem-produto3"  style="box-shadow: 0 2px 10px -3px #117964;">
+        <div class="price-tag" style="color:#fff;"><span>30th April, 2022</span></div>
+        </div>
+        <div class="texto-produto3">
+          <h2>LOGISTICS </h2>
+         
+        </div>
 
+      </div>
+      
+      
+    </section><!-- End Services Section -->
+    <div class="section-title" style="background-color:#fff;">
+      <h2  style="background-color:#fff;  height: 30px; color:#000; box-shadow: 0 2px 10px -3px #117964; border-radius:0;">SEE MORE</h2> 
+      <h2  style="background-color:blue; height: 30px;  border-radius:0 5px 5px 0; color:#000;">- </h2> 
+   
+    </div>
+
+    <!-- ======= Features Section ======= -->
+    <!--<section id="features" class="features">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-3 col-md-4 col-6 col-6">
+            <div class="icon-box">
+              <i class="ri-store-line" style="color: #ffbb2c;"></i>
+              <h3><a href="">Lorem Ipsum</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6">
+            <div class="icon-box">
+              <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
+              <h3><a href="">Dolor Sitema</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
+              <h3><a href="">Sed perspiciatis</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 mt-4 mt-lg-0">
+            <div class="icon-box">
+              <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
+              <h3><a href="">Magni Dolores</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 mt-4">
+            <div class="icon-box">
+              <i class="ri-database-2-line" style="color: #47aeff;"></i>
+              <h3><a href="">Nemo Enim</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 mt-4">
+            <div class="icon-box">
+              <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
+              <h3><a href="">Eiusmod Tempor</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 mt-4">
+            <div class="icon-box">
+              <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
+              <h3><a href="">Midela Teren</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 mt-4">
+            <div class="icon-box">
+              <i class="ri-price-tag-2-line" style="color: #4233ff;"></i>
+              <h3><a href="">Pira Neve</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 mt-4">
+            <div class="icon-box">
+              <i class="ri-anchor-line" style="color: #b2904f;"></i>
+              <h3><a href="">Dirada Pack</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 mt-4">
+            <div class="icon-box">
+              <i class="ri-disc-line" style="color: #b20969;"></i>
+              <h3><a href="">Moton Ideal</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 mt-4">
+            <div class="icon-box">
+              <i class="ri-base-station-line" style="color: #ff5828;"></i>
+              <h3><a href="">Verdo Park</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 mt-4">
+            <div class="icon-box">
+              <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
+              <h3><a href="">Flavor Nivelanda</a></h3>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section> -->
     <!-- End Features Section -->
 
    
@@ -431,13 +495,98 @@
     <!-- End Portfolio Section -->
 
     <!-- ======= Pricing Section ======= -->
-     
+     <section id="pricing" class="pricing" style="margin-bottom:50px;">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Foundation</h2>
+          <h3>Impacting<span> Lives</span></h3>
+          <p> Be a Partner by Donating to this positive course every month. </p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-offset="200"data-aos="zoom-in">
+            <div class="box"  style="box-shadow: 0 2px 10px -3px #117964;" >
+              <h3>Free</h3>
+              <h4><sup>$</sup>0<span> / month</span></h4>
+              <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li class="na">Pharetra massa</li>
+                <li class="na">Massa ultricies mi</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Donate</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-offset="200"data-aos="zoom-in">
+            <div class="box recommended" >
+              <span class="recommended-badge">Partners</span>
+              <h3>Business</h3>
+              <h4><sup>$</sup>19<span> / month</span></h4>
+              <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li class="na">Massa ultricies mi</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Donate </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-offset="200"data-aos="zoom-in">
+            <div class="box"  style="box-shadow: 0 2px 10px -3px #117964;">
+              <h3>Developer</h3>
+              <h4><sup>$</sup>29<span> / month</span></h4>
+              <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li>Massa ultricies mi</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Donate</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section> 
+    <!-- End Pricing Section -->
+
 
 
 
 
        <!-- ======= Cta Section ======= -->
-      
+       <section id="cta" class="cta" >
+        <div class="container">
+          
+          <div class="text-center" >
+            <div class="video-section">
+              <div class="video-section-half1" data-aos="fade-right" data-aos-offset="100">
+                <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;">   Media</h6>
+                <h1 style="color:white;text-align:left;"><b>News Room</b></h1>
+                <h5 style="color:white; margin-bottom:10px; text-align:left;"> our approach to sustainability goes beyond<br> compliance with regulatory expectations.<br> We are driven by a desire to contribute to,<br> and positively impact the development of <br> the society.
+                  <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;">   See More -</h6>
+                </h5>
+                
+              </div>
+              <div class="video-section-half2" data-aos="fade-left" data-aos-offset="100">
+                <img src="" style="width: 100%;"class="img-fluid" alt="">
+                 </div> 
+             
+            </div>
   
            <!--- <h3>Join our team</h3>
             <p> We are looking to recruit like minded and passionate people who are looking at making the best of their skills, talents and outreach. We are warm family on a journey of growth. You would enjoy adding value.</p>
